--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <a href="/contact.html">Contact us</a>
-    <a href="/photos.html">Photos</a>
+    <header>
+      <a href="/index.html">Home</a>
+      <a href="/contact.html">Contact us</a>
+      <a href="/photos.html">Photos</a>
+    </header>
     <h1>Croissant</h1>
     <p>
       Croissants are named for their historical crescent shape. The dough is
