--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact me</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <a href="/index.html">Home</a>
-    <a href="/photos.html">photos</a>
+    <header>
+      <a href="/index.html">Home</a>
+      <a href="/contact.html">Contact us</a>
+      <a href="/photos.html">photos</a>
+    </header>
     <h1>Contact me</h1>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae magni
