--- a/photos.html
+++ b/photos.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <a href="/index.html">Home</a>
-    <a href="/contact.html">Contact us</a>
+    <header>
+      <a href="/index.html">Home</a>
+      <a href="/contact.html">Contact us</a>
+      <a href="/photos.html">photos</a>
+    </header>
     <h1>Croissant photos</h1>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae magni
