--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <meta name="description" content="Little site about croissant" />
+    <title>Croissant- Zoe.com</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
-      <a href="/index.html">Home</a>
-      <a href="/contact.html">Contact us</a>
-      <a href="/photos.html">Photos</a>
+      <a href="/index.html" title="homepage">Home</a>
+      <a href="/contact.html" title="Call us at">Contact us</a>
+      <a href="/photos.html" title="gallery">Photos</a>
     </header>
     <h1>Croissant</h1>
     <p>
